--- a/user.html
+++ b/user.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <pre>
     
             //1.Ecommerce Cart--->
 
@@ -1115,6 +1116,7 @@ app.listen(PORT, () => {
     </script>
 </body>
 </html>
+    </pre>
 
 </body>
 </html>
